[mail-api] FEATBL-1872 Feat: mail-api only strategy for ItemTransfer